# bx-engine

./: CMakeLists.txt  README.md
include/bx/engine/: data.hpp  ecs.hpp  engine.hpp  resource.hpp  script.hpp
include/bx/engine/editor/: toolbar.hpp
include/bx/engine/editor/views/: assets_view.hpp  profiler_view.hpp
src/bx/engine/: engine.cpp  script.cpp
src/bx/engine/editor/: asset_importer.cpp  assets.cpp  toolbar.cpp
src/bx/engine/editor/views/: assets_view.cpp  console_view.cpp  data_view.cpp  entity_view.cpp  profiler_view.cpp  script_view.cpp  settings_view.cpp
